# gitcoin-grants-data-portal

./: .gitignore  .nojekyll  Dockerfile  FUNDING.json  LICENSE  Makefile  README.md  about.html  catalog.html  index.html  notebook.html  pyproject.toml  readme.html  robots.txt  sandbox.html  search.json  sitemap.xml  styles.css  styles.scss
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker-publish.yml  link_check.yml  run.yml  upload_folder_to_iroh.sh
data/: IPFS_CID  index.html
dbt/: dbt_project.yml  profiles.yml
dbt/models/: allo_applications.sql  allo_deployments.sql  allo_donations.sql  allo_prices.sql  allo_projects.sql  allo_rounds.sql  allo_subscriptions.sql  application_answers.sql  chain_metadata.sql  gitcoin_passport_scores.sql  giveth_projects.sql  hypercert_claims.sql  karmahq_details.sql  passport_scores.sql  projects.sql  round_applications.sql  round_votes.sql  rounds.sql  schema.yml  sources.yml  tables.yml
dbt/tests/generic/: is_address_lowercase.sql
ggdp/: __init__.py  assets.py  db.py  jobs.py  ops.py  resources.py
ggdp/assets/: allo.py  other.py
notebooks/: chain-data.ipynb  client-side-query.qmd  sandbox.ipynb
portal/: _quarto.yml  about.qmd  catalog.ipynb  index.qmd  notebook.ipynb  python-quickstart.ipynb  reports.ipynb  sandbox.ipynb  styles.scss
reports/: sandbox.ipynb
sandbox_files/libs/bootstrap/: bootstrap.min.css
site_libs/bootstrap/: bootstrap.min.css
